--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactbmicalculator",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jkriszta.github.io/reactbmicalculator/",
+  "homepage": "https://jkriszta.github.io/react-bmicalculator/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
